# EngineEngine

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
include/core/: Cube.hpp  Square.hpp  Triangle.hpp  VisualObject.hpp
include/glad/: glad.h
include/rend/: Shader.h
include/ui/: Camera.h  Scene.h  Ui.h  scene.hpp
shaders/: Fragment.fs
src/: glad.c  main.cpp
src/core/: Square.cpp  Triangle.cpp  VisualObject.cpp
